--- a/Mango/Assets/WebGLTemplates/MainTheme/style.css
+++ b/Mango/Assets/WebGLTemplates/MainTheme/style.css
@@ -3,8 +3,8 @@ html {
 }
 
 
-.webgl-content * {border: 0; margin: 0; padding: 0; }
-.webgl-content {position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); box-shadow: 1px 1px 20px white;}
+.webgl-content * {border: 0; margin: 0; padding: 0;  }
+.webgl-content {box-shadow: 1px 1px 20px white;  margin: auto; width: 70%;}
 
 .webgl-content .logo, .progress {position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 .webgl-content .logo {background: url('TemplateImages/progressLogo.Light.png') no-repeat center / contain; width: 154px; height: 130px;}
@@ -22,9 +22,8 @@ html {
 .webgl-content .footer .title {margin-right: 10px; float: right; color: blanchedalmond;}
 .webgl-content .footer .fullscreen {background-image: url('TemplateImages/fullscreen.png'); width: 38px; float: right;}
 
-.webgl-content .mainTitle {position: absolute; left: 32%; top: 0%;}
-.webgl-content .mainTitle {font-size: 100px; height: 100%; width: 100%; margin-top: -150px;}
-.webgl-content .mainTitle {
+.mainTitle {font-size: 100px; height: 100%; width: 100%; text-align: center;}
+.mainTitle {
   --interval: 1s;
   display: block;
   text-shadow: 
@@ -36,7 +35,7 @@ html {
   filter: saturate(60%);
   animation: flicker steps(100) var(--interval) 1s infinite;
 }
-.webgl-content .mainTitle:nth-of-type(1) {
+.mainTitle:nth-of-type(1) {
   color: whitesmoke;
   --color1:#448AFF;
   --color2:#2979FF;
@@ -46,19 +45,15 @@ html {
 }
 
 .controls {
-  border: 0; 
-  margin: 0; 
-  padding: 0; 
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;  
+  width: 70%;
+
   background: rgb(19, 19, 18);
   font-family: Trebuchet MS; 
   color:whitesmoke;
-  position: absolute; 
-  top: 103%; 
-  left: 50%; 
-  width: 1280px; 
-  height: auto;
-  -webkit-transform: translate(-50%, -50%); 
-  transform: translate(-50%, -50%); 
   opacity: .9;
   border: 1px solid white;
   box-shadow: 1px 1px 20px white;
@@ -78,4 +73,34 @@ html {
 
 @keyframes flicker {
   50% {color: white; filter: saturate(200%) hue-rotate(20deg);}
+}
+.btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+
+}
+
+.btn:hover {
+  background-color: RoyalBlue;
+}
+.loader {
+  margin-left: auto;
+  margin-right: auto;  
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
